--- a/css/style.css
+++ b/css/style.css
@@ -1,40 +1,8 @@
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family:'Courier New', Courier, monospace;
-}
-
-.row {
-    width: 100%;
-    display: flex;
-}
-
-.wrapper-benefit {
-    background-color: #000;
+/* ============================== Hadi CSS ====================== */
+.benefit {
+    background-color: black;
     color: white;
     padding: 1.5em 0 5em 0;
-}
-
-.benefit {
-    width: 80%;
-    margin: auto;
-    border: 1px solid #000;
-}
-
-.benefit .heading-title {
-    margin-bottom: 1.5em;
-}
-
-.benefit .col {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 0 2em;
-}
-
-.benefit .title {
-    margin: 1em 0;
 }
 
 .benefit .image {
@@ -42,51 +10,24 @@
     height: 50px;
 }
 
-.benefit p {
-    text-align: justify;
-}
 
-.wrapper-footer {
+.footer {
     background-image: url('../assets/annie-spratt-R3LcfTvcGWY-unspl.png');
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
-    display: flex;
-    justify-content: center;
-    width: 100%;
-    padding: 5em 0;
+    padding: 0 0 10em 0;
     text-align: center;
+    color: white;
 }
 
-.footer {
-    display: flex;
-    flex-direction: column;
+.footer h1 {
+    margin: 2em 0 1.5em 0;
 }
-
-.footer .title h1,
-.footer .content h3 {
-    margin: 2em 0;
+.footer h1,
+.footer h3 {
     color: white;
     text-shadow: 5px 5px 10px black;
 }
-
-.footer .btn {
-    all: unset;
-    display: block;
-    padding: 1em 0em;
-    font-weight: bold;
-    text-align: center;
-    margin: 1em 0;
-    border-radius: 3px;
-}
-
-.footer .btn.pesan {
-    background-color: aliceblue;
-    color: black;
-}
-
-.footer .btn.booking {
-    background-color: darkorange;
-    color: white;
-}
+/* ============================== End Of Hadi CSS ====================== */
