--- a/css/style.css
+++ b/css/style.css
@@ -11,8 +11,35 @@ body{
     overflow-x: hidden;
 }
 
-.head-sec{
+.head_secanas{
+  display: block;
+  background-size: cover;
+  background-repeat: no-repeat;
+  margin-bottom: 0px;
+}
+
+.headtextanas{
+  position: absolute;
+  top: 50px;
+  left: 100px;
+  width: 400px;
+  height: auto;
   
+}
+
+.headtextanas p{
+  display: block;
+  color: white;
+  font-size: 18px;
+  width: 700px;
+}
+
+.headtextanas button{
+  background-color: #F16D08;
+  width: 238px;
+  height: 70px;
+  color: white;
+  font-weight: 500;
 }
 
 /* .text_head{
